sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:6: error: type mismatch;
 found   : Unit
 required: Boolean
  while(k=0){
         ^